--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.epds.javafx_login/com.epds.javafx_login.HelloApplication</mainClass>
+              <mainClass>com.epds.javafx_login/com.epds.javafx_login.Main</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
