--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
       <version>2.11.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.5.2.Final</version>
+    </dependency>
 
   </dependencies>
 
