Imported a less heavy ORM

--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.hibernate.orm</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>6.5.2.Final</version>
+      <groupId>com.j256.ormlite</groupId>
+      <artifactId>ormlite-jdbc</artifactId>
+      <version>6.1</version>
     </dependency>
 
   </dependencies>
