--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,15 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<junit.version>5.10.0</junit.version>  </properties>
+    <junit.version>5.10.0</junit.version>
+  </properties>
+
+  <repositories>
+    <repository>
+      <id>Maven Central Repository</id>
+      <url>https://repo1.maven.org/maven2/</url>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
@@ -76,6 +84,8 @@
       <artifactId>ormlite-jdbc</artifactId>
       <version>6.1</version>
     </dependency>
+
+
 
   </dependencies>
 
