--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,6 @@
       <version>3.46.0.0</version>
     </dependency>
 
-
     <dependency>
       <groupId>io.reactivex.rxjava3</groupId>
       <artifactId>rxjava</artifactId>
@@ -85,7 +84,11 @@
       <version>6.1</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.pdfsam.rxjava3</groupId>
+      <artifactId>rxjavafx</artifactId>
+      <version>3.0.3</version>
+    </dependency>
 
   </dependencies>
 
